# OpenML-Connect

./: .gitignore  CMakeLists.txt  OpenML.h  README.md  conanfile.txt  main.cc
src/: File.h  HttpConnection.h  Tagged.h  XMLParser.h
xml/: Component.h  Dataset.h  DatasetDescription.h  DatasetList.h  Dataupload.h  Evaluation.h  EvaluationList.h  Flow.h  FlowList.h  OMLPrimitive.h  Parameter.h  QualitiesList.h  Quality.h  Run.h  RunList.h  Task.h  TaskInput.h  TaskList.h
